@@ -1,3 +1,8 @@
+2010-05-19  Maxim Kuvyrkov  <maxim@codesourcery.com>
+
+	* linux-m68k-low.c: Include <asm/ptrace.h>
+	(ps_get_thread_area): Implement.
+
 2010-05-03  Doug Evans  <dje@google.com>
 
 	* event-loop.c (struct callback_event): New struct.
